[package]
name = "did_url_parser"
version = "0.2.0"
authors = ["IOTA Stiftung"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A no_std parser for Decentralized Identifiers (DIDs)"
repository = "https://github.com/iotaledger/did_url"
keywords = ["decentralized", "identity", "did"]
categories = ["parser-implementations", "encoding"]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
readme = "README.md"

[dependencies]
form_urlencoded = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }

[dev-dependencies]
proptest = { version = "0.10.1" }

[features]
default = ["std"]

# Enables functionality requiring the `std` crate.
std = ["alloc"]

# Enables functionality requiring the `alloc` crate.
alloc = []

# Adds Deserialize/Serialize implementations for `DID`.
# serde = []
